--- a/index.html
+++ b/index.html
@@ -1,95 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1,
-  maximum-scale=5"
-    />
-
-    <link rel="icon" href="devchallenges.png" />
-
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="https://devchallenges.io/"
-    />
-
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
       rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
     />
-
-    <title>Devchallenges</title>
-
-    <style>
-      body {
-        font-family: "Poppins", sans-serif;
-      }
-
-      ul {
-        padding-left: 24px;
-      }
-
-      li {
-        margin-bottom: 8px;
-      }
-
-      .welcome {
-        max-width: 800px;
-        margin: 0 auto;
-      }
-
-      .welcome-text {
-        margin-top: 30vh;
-        font-weight: 500;
-      }
-
-      .welcome-text p {
-        font-size: 1rem;
-        font-weight: 400;
-      }
-
-      .welcome-text h1 {
-        font-size: 1.5rem;
-      }
-
-      .welcome-text a {
-        color: #f7542e;
-      }
-    </style>
+    <link rel="stylesheet" href="css/main.css" />
+    <title>Prasanna Raj Karki | Portfolio</title>
   </head>
   <body>
-    <div class="welcome">
-      <div class="welcome-text">
-        <h1>
-          Welcome to
-          <a href="https://devchallenges.io/" target="_blank"
-            >devchallenges.io</a
-          >
-        </h1>
+    <div class="container">
+      <section class="profile section">
+        <div class="profile__image m-bottom-sm">
+          <img class="profile-pic" src="images/image2.jpg" alt="profile pic" />
+        </div>
+        <div class="profile__details">
+          <div class="personal-detail">
+            <div class="name-detail m-bottom-sm">
+              <p class="heading-text text-dark">Prasanna Raj Karki</p>
+              <p class="sub-text text-light">Front-end developer</p>
+            </div>
 
-        <p>
-          If you have any questions, don't hesitate to ask on Discord. Here are
-          7 general steps to complete the challenge:
-        </p>
-      </div>
-
-      <ul>
-        <li><b>Step 1:</b> Create a new repository on github</li>
-        <li><b>Step 2:</b> Copy resources, README.md to your repository</li>
-        <li>
-          <b>Step 3:</b> Login to Figma to checkout font, color, spacing,..
-        </li>
-        <li><b>Step 4:</b> Complete all user stories</li>
-        <li><b>Step 5:</b> Update README.md</li>
-        <li><b>Step 6:</b> Deploy your app and submit your solution</li>
-        <li>
-          <b>Step 7:</b> Share your solution on Discord, Twitter and other
-          platforms to ask for feedback
-        </li>
-      </ul>
+            <div class="contact-detail m-bottom-sm">
+              <p class="contact-detail__email">
+                <i class="fas fa-envelope font-icon"></i>
+                prasanna.karki77@gmail.com
+              </p>
+              <p class="contact-detail__phone">
+                <i class="fas fa-phone-alt font-icon"></i>
+                (+977)9867576332
+              </p>
+            </div>
+          </div>
+          <div class="profile-info-text text-light">
+            <p>
+              Self-motivated developer, who is willing to learn and create
+              outstanding UI applications.
+              <span> </span>
+              Donec aliquam est dui, vel vestibulum diam sollicitudin id.
+              Quisque feugiat malesuada molestie.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="skills">
+        <div class="skills__frontend section">
+          <h1 class="heading-text">FRONT END</h1>
+          <div class="skills-details">
+            <div class="skills-list text-light">
+              <li>
+                <h2>HTML</h2>
+                <span class="bar"><span class="html"></span></span>
+              </li>
+              <li>
+                <h2>CSS</h2>
+                <span class="bar"><span class="css"></span></span>
+              </li>
+              <li>
+                <h2>Javascript</h2>
+                <span class="bar"><span class="js"></span></span>
+              </li>
+              <li>
+                <h2>Bootstrap</h2>
+                <span class="bar"><span class="bootstrap"></span></span>
+              </li>
+              <li>
+                <h2>Sass</h2>
+                <span class="bar"><span class="sass"></span></span>
+              </li>
+              <li>
+                <h2>Figma</h2>
+                <span class="bar"><span class="figma"></span></span>
+              </li>
+            </div>
+          </div>
+        </div>
+        <div class="skills__others">
+          <div class="section">
+            <h1 class="heading-text">OTHERS</h1>
+            <div class="skills-details">
+              <div class="skills-list text-light">
+                <li>
+                  <h2>Python</h2>
+                  <span class="bar"><span class="python"></span></span>
+                </li>
+                <li>
+                  <h2>Java</h2>
+                  <span class="bar"><span class="java"></span></span>
+                </li>
+                <li>
+                  <h2>Django</h2>
+                  <span class="bar"><span class="django"></span></span>
+                </li>
+                <li>
+                  <h2>My SQL</h2>
+                  <span class="bar"><span class="sql"></span></span>
+                </li>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- <section class="experiences">
+      exp
+      </section> -->
+      <!-- <section class="projects">
+      projects
+      </section> -->
+      <!-- <section class="hobbies">
+      hobbies
+      </section> -->
+      <!-- <section class="blogs">
+        blogs
+      </section>  -->
     </div>
   </body>
 </html>
