--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
   <body>
     <div class="container">
       <section class="profile section">
-        <div class="profile__image m-bottom-sm">
+        <div class="profile__image m-bottom-md">
           <img class="profile-pic" src="images/image2.jpg" alt="profile pic" />
         </div>
         <div class="profile__details">
           <div class="personal-detail">
-            <div class="name-detail m-bottom-sm">
+            <div class="name-detail m-bottom-md">
               <p class="heading-text text-dark">Prasanna Raj Karki</p>
               <p class="sub-text text-light">Front-end developer</p>
             </div>
 
-            <div class="contact-detail m-bottom-sm">
-              <p class="contact-detail__email">
+            <div class="contact-detail m-bottom-md">
+              <p class="email">
                 <i class="fas fa-envelope font-icon"></i>
                 prasanna.karki77@gmail.com
               </p>
-              <p class="contact-detail__phone">
+              <p class="phone">
                 <i class="fas fa-phone-alt font-icon"></i>
                 (+977)9867576332
               </p>
@@ -50,7 +50,7 @@
       </section>
       <section class="skills">
         <div class="skills__frontend section">
-          <h1 class="heading-text">FRONT END</h1>
+          <h1 class="heading-text">Frontend</h1>
           <div class="skills-details">
             <div class="skills-list text-light">
               <li>
@@ -82,7 +82,7 @@
         </div>
         <div class="skills__others">
           <div class="section">
-            <h1 class="heading-text">OTHERS</h1>
+            <h1 class="heading-text">Others</h1>
             <div class="skills-details">
               <div class="skills-list text-light">
                 <li>
@@ -106,18 +106,179 @@
           </div>
         </div>
       </section>
-      <!-- <section class="experiences">
-      exp
-      </section> -->
-      <!-- <section class="projects">
-      projects
-      </section> -->
-      <!-- <section class="hobbies">
-      hobbies
-      </section> -->
-      <!-- <section class="blogs">
-        blogs
-      </section>  -->
+      <section class="experiences section">
+        <h1 class="heading-text text-dark m-bottom-md">Experiences</h1>
+        <!-- <h1 class="sub-text text-light">
+          No work experiences yet.
+        </h1> -->
+        <div class="exp">
+          <div class="company-logo">
+            <img src="images/company1.png" alt="" />
+          </div>
+          <div class="exp-details m-bottom-md">
+            <h3 class="exp__duration text-light">Feb 2017 - Current</h3>
+            <h2 class="exp__job-title text-dark m-bottom-md">
+              Front-end developer
+            </h2>
+            <p class="exp__desc text-light">
+              Donec aliquam est dui, vel vestibulum diam sollicitudin id.
+              Quisque feugiat malesuada molestie.
+            </p>
+          </div>
+        </div>
+        <div class="exp">
+          <div class="company-logo">
+            <img src="images/company2.png" alt="" />
+          </div>
+          <div class="exp-details m-bottom-md">
+            <h3 class="exp__duration text-light">Aug 2016 - Feb 2018</h3>
+            <h2 class="exp__job-title text-dark m-bottom-md">
+              Full-stack developer
+            </h2>
+            <p class="exp__desc text-light">
+              Donec aliquam est dui, vel vestibulum diam sollicitudin id.
+              Quisque feugiat malesuada molestie.
+            </p>
+          </div>
+        </div>
+        <div class="exp">
+          <div class="company-logo">
+            <img src="images/company3.png" alt="" />
+          </div>
+          <div class="exp-details m-bottom-md">
+            <h3 class="exp__duration text-light">Jun 2015 - Aug 2016</h3>
+            <h2 class="exp__job-title text-dark m-bottom-md">
+              Junior front-end developer
+            </h2>
+            <p class="exp__desc text-light">
+              Donec aliquam est dui, vel vestibulum diam sollicitudin id.
+              Quisque feugiat malesuada molestie.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="projects">
+        <div class="projects__head section m-bottom-sm">Projects</div>
+        <div class="project section m-bottom-md">
+          <div class="project__image">
+            <img src="images/project1.png" alt="" />
+          </div>
+          <div class="project__desc">
+            <div class="tags m-bottom-md">#HTML #CSS #Resonsive</div>
+            <h1 class="heading-text text-dark m-bottom-sm">Edie Homepage</h1>
+            <p class="m-bottom-md">
+              In this project, I work with HTML and CSS to create a responsive
+              page . The design is from devchallenge.io. Donec aliquam est dui,
+              vel vestibulum diam sollicitudin id. Quisque feugiat malesuada
+              molestie.
+            </p>
+            <div class="buttons">
+              <a href="#" class="btn-blue">Demo</a>
+              <a href="#" class="btn-white">Code</a>
+            </div>
+          </div>
+        </div>
+        <div class="project section m-bottom-md">
+          <div class="project__image">
+            <img src="images/project1.png" alt="" />
+          </div>
+          <div class="project__desc">
+            <div class="tags m-bottom-md">#HTML #CSS #Resonsive</div>
+            <h1 class="heading-text text-dark m-bottom-sm">Edie Homepage</h1>
+            <p class="m-bottom-md">
+              In this project, I work with HTML and CSS to create a responsive
+              page . The design is from devchallenge.io. Donec aliquam est dui,
+              vel vestibulum diam sollicitudin id. Quisque feugiat malesuada
+              molestie.
+            </p>
+            <div class="buttons">
+              <a href="#" class="btn-blue">Demo</a>
+              <a href="#" class="btn-white">Code</a>
+            </div>
+          </div>
+        </div>
+        <div class="project section m-bottom-md">
+          <div class="project__image">
+            <img src="images/project1.png" alt="" />
+          </div>
+          <div class="project__desc">
+            <div class="tags m-bottom-md">#HTML #CSS #Resonsive</div>
+            <h1 class="heading-text text-dark m-bottom-sm">Edie Homepage</h1>
+            <p class="m-bottom-md">
+              In this project, I work with HTML and CSS to create a responsive
+              page . The design is from devchallenge.io. Donec aliquam est dui,
+              vel vestibulum diam sollicitudin id. Quisque feugiat malesuada
+              molestie.
+            </p>
+            <div class="buttons">
+              <a href="#" class="btn-blue">Demo</a>
+              <a href="#" class="btn-white">Code</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="hobbies section">
+        <h1 class="heading-text text-dark m-bottom-md">Hobbies</h1>
+        <div class="hobby m-bottom-md">
+          <div class="hobby__image m-bottom-sm">
+            <img src="images/project1.png" alt="" />
+          </div>
+          <h2 class="hobby__name text-dark m-bottom-sm">Gaming</h2>
+          <p class="hobby__desc text-light">
+            Quisque feugiat malesuada molestie.
+          </p>
+        </div>
+        <div class="hobby m-bottom-md">
+          <div class="hobby__image m-bottom-sm">
+            <img src="images/project1.png" alt="" />
+          </div>
+          <h2 class="hobby__name text-dark m-bottom-sm">Gaming</h2>
+          <p class="hobby__desc text-light">
+            Quisque feugiat malesuada molestie.
+          </p>
+        </div>
+      </section>
+      <section class="blogs">
+        <div class="blogs__head section m-bottom-sm">Blogs</div>
+        <div class="section blog-section m-bottom-md">
+          <h4 class="blog-tag m-bottom-sm">Blog</h4>
+          <div class="blog">
+            <div class="blog-details">
+              <div class="blog-details__title m-bottom-sm">How to organize your CSS</div>
+              <p class="blog-details__desc m-bottom-sm text-light">
+                In this article I tell the story about Proin eu justo sit amet
+                lacus bibendum tincidunt. Vivamus non volutpat nisl, a luctus
+                mi. <br><br>Donec aliquam est dui, vel vestibulum diam sollicitudin id.
+                Quisque feugiat malesuada molestie.
+              </p>
+              <a class="blog-details__link" href="">dev.to</a>
+            </div>
+            
+            <div class="blog__image">
+              <img src="images/blog1.jpg" alt="" />
+            </div>
+          </div>
+        </div>
+        <div class="section blog-section m-bottom-sm">
+          <h4 class="blog-tag m-bottom-sm">Blog</h4>
+          <div class="blog">
+            <div class="blog-details">
+              <div class="blog-details__title m-bottom-sm">How to organize your CSS</div>
+              <p class="blog-details__desc m-bottom-sm text-light">
+                In this article I tell the story about Proin eu justo sit amet
+                lacus bibendum tincidunt. Vivamus non volutpat nisl, a luctus
+                mi. <br><br>Donec aliquam est dui, vel vestibulum diam sollicitudin id.
+                Quisque feugiat malesuada molestie.
+              </p>
+              <a class="blog-details__link" href="">dev.to</a>
+            </div>
+            
+            <div class="blog__image">
+              <img src="images/blog1.jpg" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
